# pulumi-integration-test

./: .gitignore  Pulumi.ax-dev.yaml  README.md  __main__.py  add_encryption_key_to_stack.sh  authorize_keyvault_for_self.sh  pulumi_login.sh  pulumi_wrapper.sh  pyproject.toml
.github/scripts/: deploy_resources.sh  pre-deploy.sh  pre-pulumi.sh
.github/workflows/: ci.yml
