[tool.poetry]
name = "integra-test"
version = "0.1.0"
description = "this is a repo for integration test with pulumi"
authors = ["angiexiong <angie.xiong@merative.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pulumi = "^3.38.0"
pulumi-azure-native = "^1.71.0"
pulumi-random = "^4.8.2"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
